@@ -30,7 +30,7 @@ Bugs fixed:
 - 2892739 buffer overruns in dataValueToString()
 - 2727811 typeo in fileRepository.c
 - 2532149 sfcb: instance ops against non-instance MI report no error
-
+- 2900630 Allow for instances > chunkSize when chunking enabled
 
 Changes in 1.3.5
 ================
